--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".feature.SampleActivity">
 
-    <Button
-        android:id="@+id/button"
+    <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dynamic Feature"
